src/objects/Special_Guidelines_Internal_Instructions__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Special Guidelines/Internal Instructions</relationshipLabel>
        <relationshipName>Special_Guidelines_Internal_Instructions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Directive_From__c</fullName>
        <label>Directive From</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Mailing_Instructions__c</fullName>
        <label>Invoice Mailing Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Report_Mailing_Instructions__c</fullName>
        <label>Case Report Mailing Instructions</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Special_Guidelines__c</fullName>
        <label>Special Guidelines</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Travel_Authorizations_Limitations__c</fullName>
        <label>Travel Authorizations/Limitations</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Special Guidelines/Internal Instructions</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>G-{0000}</displayFormat>
        <label>Special Guidelines/Internal Instructions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Special Guidelines/Internal Instructions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>